# quadruped_control

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  package.xml  patch_base.py  patch_controller.py  patch_controller_mpc.py  patch_mpc.py  patch_traj.py  patch_traj2.py
config/: controllers.yaml  rviz_config.rviz
description/: quadro.xacro  robot.xml  scene.xml
description/isaac_sim/: quadro.urdf
docker/: Dockerfile  entrypoint.sh  run.sh
launch/: quadro_isaac_sim_launch.py  quadro_mujoco_launch.py
scripts/: generate_terrain.py  logger.py  walk_quarter_circle.py
src/: control_node.cpp  test_node.cpp
src/controller/: CMakeLists.txt
src/controller/inc/: dynamic_controller.hpp  gait_scheduler.hpp  inverse_kinematics.hpp  model.hpp  mpc.hpp  quadro_controller.hpp  trajectory_generator.hpp
src/controller/src/: dynamic_controller.cpp  gait_scheduler.cpp  inverse_kinematics.cpp  model.cpp  mpc.cpp  quadro_controller.cpp  trajectory_generator.cpp
